[package]
name = "gpu"
version = "0.1.0"
authors = ["Ygnas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.7.0"
winit = "0.24.0"
cgmath = "0.18.0"
env_logger = "0.8.2"
log = "0.4.14"
futures = "0.3.12"
image = "0.23.13"
bytemuck = { version = "1.5.0", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"